--- a/index.html
+++ b/index.html
@@ -6,29 +6,21 @@
 </head>
 <body>
     <h1>MIRA BIEN, HIJO DE TU PUTA MADRE...</h1>
-    <H2>SOY MENCHO WEY</H2>
+    <h2>SOY MENCHO WEY</h2>
     <h3>ME CALMAS A TU PINCHE GENTE ALV</h3>
-    <H4>MIRA ANDRE, ESTO ES TODO LO QUE ME SÉ DE ESE MEME YA CONTESTAME MEJOR</H4>
- 
-    </audio>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Mi página</title>
-</head>
-<body>
+    <h4>MIRA ANDRE, ESTO ES TODO LO QUE ME SÉ DE ESE MEME YA CONTESTAME MEJOR</h4>
 
-    <h1>Mi página</h1>
+    <br><br>
 
-    <!-- AQUÍ VA EL GIF -->
+    <!-- GIF -->
     <img src="gif.gif" width="300">
 
     <br><br>
 
-    <!-- AQUÍ VA LA MÚSICA -->
-    <audio controls>
+    <!-- Música -->
+    <audio controls loop>
         <source src="musica.mp3" type="audio/mpeg">
+        Tu navegador no soporta audio.
     </audio>
+</body>
+</html>
